--- a/DemoAWSCodeDeploy/pom.xml
+++ b/DemoAWSCodeDeploy/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.sazlabs</groupId>
 	<artifactId>DemoAWSCodeDeploy</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>DemoAWSCodeDeploy</name>
