--- a/DemoAWSCodeDeploy/appspec.yml
+++ b/DemoAWSCodeDeploy/appspec.yml
@@ -1,12 +1,15 @@
 version: 0.0
 os: linux
 files:
-  - source: /target/DemoAWSCodeDeploy-1.0-SNAPSHOT.war
+  - source: /DemoAWSCodeDeploy/target/DemoAWSCodeDeploy-1.0-SNAPSHOT.war
     destination: /tmp/codedeploy-deployment-staging-area/
 hooks:
   ApplicationStop:
-    - location: scripts/stop_application
+    - location: DemoAWSCodeDeploy/scripts/stop_application
+      timeout: 300
+  BeforeInstall:
+    - location: DemoAWSCodeDeploy/scripts/install_dependencies
       timeout: 300
   ApplicationStart:
-    - location: scripts/start_application
+    - location: DemoAWSCodeDeploy/scripts/start_application
       timeout: 300
